--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,17 @@
+html {
+    font-size: 1rem;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  main {
-    flex: 1;
-  }
-  footer {
-    flex-shrink: 0;
-  }
-  
+    margin: 0px;
+    height: 100%;
+    padding: 2rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: var(--surface-ground);
+    font-family: var(--font-family);
+    font-weight: normal;
+    color: var(--text-color);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
